# EasySwift-Library

./: .gitignore  CMakeLists.txt  Demo.cpp  README.md  build.bat  buildDemo.bat
include/: Audio.hpp  AudioEngine.hpp  Camera.hpp  CharacterMap.hpp  Clock.hpp  Cursor.hpp  Event.hpp  ImGUI.hpp  Keyboard.hpp  Mouse.hpp  Shader.hpp  Sprite.hpp  Sprite3D.hpp  Text.hpp  Texture.hpp  Window.hpp
include/BasicShape/: CircleShape.hpp  Shape.hpp
lib/: esl.lib  glad.lib  multimedia.lib
src/: Audio.cpp  AudioEngine.cpp  CharacterMap.cpp  Clock.cpp  Cursor.cpp  Event.cpp  Keyboard.cpp  Mouse.cpp  Shader.cpp  Sprite.cpp  Sprite3D.cpp  Text.cpp  Texture.cpp  Window.cpp
src/BasicShape/: CircleShape.cpp  Shape.cpp
